<resources>

    <string name="app_name">AndroidSensors</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_android_sensors">AndroidSensors</string>
    <string name="movement">Movement</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magnet">Magnet</string>
    <string name="direction">Direction</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="micophone">Microphone</string>
    <string name="camera">Camera</string>
    <string name="gps">GPS</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="select_input">Select sensors:</string>
    <string name="output_method">Select output methods:</string>
    <string name="xml">XML</string>
    <string name="view">View</string>
    <string name="dialog">Dialog</string>
    <string name="audiofile">Audiofile</string>
    <string name="tts">TTS</string>
    <string name="email">Email</string>
    <string name="phoneCall">Phone Call</string>
    <string name="sms">SMS</string>
    <string name="file">File</string>
    <string name="internet">Internet</string>
    <string name="dialog_text">Please enter a number</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="cancel_tts">Cancel TTS</string>

</resources>