<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:gravity="center" >

    <EditText
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/dialog_text"
        android:inputType="text|number" >
    </EditText>

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:onClick="cancelDialog"
        android:text="@string/dialog_cancel" />

    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="44dp"
        android:onClick="getPhoneNumber"
        android:text="@string/dialog_ok" />
    
</RelativeLayout>